argocd/aws/203403084713/clusters/cbioportal-prod/apps/cbioportal/cbioportal_backend_genie_private_blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: cbioportal
    run: cbioportal-backend-genie-private-blue
    tags.datadoghq.com/env: eks-genie-private
    tags.datadoghq.com/service: cbioportal
    tags.datadoghq.com/version: 7.1.2
  name: cbioportal-backend-genie-private-blue
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  selector:
    matchLabels:
      run: cbioportal-backend-genie-private-blue
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        admission.datadoghq.com/java-lib.version: v1.24.2
      creationTimestamp: null
      labels:
        admission.datadoghq.com/enabled: "true"
        run: cbioportal-backend-genie-private-blue
        tags.datadoghq.com/env: eks-genie-private
        tags.datadoghq.com/service: cbioportal
        tags.datadoghq.com/version: 7.1.2
    spec:
      containers:
        - args:
            # from https://developers.redhat.com/blog/2017/04/04/openjdk-and-containers/
            #- -Xms5g
            #- -Xmx14g
            - -Xms1g
            - -Xmx12g
            - -XX:+UnlockExperimentalVMOptions
            - -XX:+UseShenandoahGC
            - -XX:ShenandoahUncommitDelay=1000
            - -XX:ShenandoahGuaranteedGCInterval=10000
            #- -XX:+AlwaysPreTouch
            #- -XX:+UseTransparentHugePages
            #- -XX:+UseNUMA
            #- -XX:+PrintGCDetails
            #- -XX:+UseParallelGC
            #- -XX:+PrintGCDateStamps
            #- -XX:ParallelGCThreads=4
            #- -XX:+UseG1GC
            #- -XX:+AggressiveHeap
            # non aggressive garbage collection
            #- -XX:MinHeapFreeRatio=20
            #- -XX:MaxHeapFreeRatio=40
            #- -XX:GCTimeRatio=19
            #- -XX:AdaptiveSizePolicyWeight=90
            # This issue says to use maxRAMFraction > 1
            # https://github.com/akka/akka/issues/23499, but haven't found this
            # to work v well
            #- -XX:MaxRAMFraction=1
            - -XX:+PrintFlagsFinal
            - -XshowSettings:vm
            # need to set MaxRAM, somehow the MaxRAMFraction is not picked up
            # from the limits
            #- -XX:MaxRAM=6500m
            - -jar
            - /cbioportal-webapp/app.jar
            # handles legacy swagger urls after upgrade
            - --springdoc.swagger-ui.disable-swagger-default-url=true
            - --springdoc.swagger-ui.path=/api/swagger-ui
            - --springdoc.api-docs.path=/api/v3/api-docs
            # enable remote debug
            - --com.sun.management.jmxremote.rmi.port=8849
            - --com.sun.management.jmxremote=false
            - --com.sun.management.jmxremote.port=8849
            - --com.sun.management.jmxremote.ssl=false
            - --com.sun.management.jmxremote.authenticate=false
            - --com.sun.management.jmxremote.local.only=false
            - --java.rmi.server.hostname=localhost
            # /enable remote debug
            - --frontend.url=https://frontend.cbioportal.org/
            - --default_cross_cancer_study_session_id=5c8a7d55e4b046111fee2296
            - --quick_search.enabled=false
            - --skin.footer= | <a href="https://www.aacr.org/professionals/research/aacr-project-genie">AACR Project GENIE</a>
            - --skin.right_nav.whats_new_blurb=
            - --skin.title=cBioPortal for GENIE
            - --skin.tag_line_image=institutes/GENIE.png
            - --skin.right_logo=institutes/AACR.png
            - '--skin.blurb=This portal contains genomic alteration data and clinical annotation from the <a href="https://www.aacr.org/professionals/research/aacr-project-genie">AACR Project GENIE</a>. While the data is publicly available, all users must adhere to the <a href="https://github.com/cBioPortal/cbioportal/blob/genie-private-documentation/docs/News.md#aacr-project-genie-cbioportal-terms-of-use">Terms of Use</a>.<p><b>Please cite</b> The AACR Project GENIE Consortium. AACR Project GEN [...]
            - --skin.examples_right_column_html=<ul><li><a href="results?cancer_study_list=genie_public&tab_index=tab_visualize&case_set_id=genie_public_all&Action=Submit&gene_list=KRAS%250ANRAS%250AHRAS%250ABRAF">RAS/RAF mutations across the GENIE cohort</a></li><li><a href="results?cancer_study_list=genie_public&genetic_profile_ids_PROFILE_MUTATION_EXTENDED=genie_public_mutations&data_priority=0&case_set_id=genie_public_all&case_ids=&patient_case_select=sample&gene_set_choice=user-defined-list [...]
            - --skin.authorization_message=Welcome to the AACR Project GENIE cBioPortal.<br/><br/>If you are a new user, you will need to register and agree to the terms of use before you can use this portal. [<a href="https://docs.google.com/forms/d/e/1FAIpQLSdf4_G0DKgAWZI54A419BIGqXQ7kSN0t89LyMbZOvPZCLVaaA/viewform">First time user registration</a>].
            - --app.name=cbioportal-genie-private
            - --security.cors.allowed-origins=*
            # connecting over dbcp
            - --dbconnector=dbcp
            - --authenticate=saml
            - --authorization=false
            - --db.user=$(DB_USER)
            - --db.password=$(DB_PASSWORD)
            - --tomcat.catalina.scope=runtime
            - --db.connection_string=$(DB_CONNECTION_STRING)
            - --enable_cross_study_expression=(studies)=>studies.filter(s=>/pan_can_atlas/.test(s.studyId) === false).length === 0
            - --spring.datasource.driver-class-name=com.mysql.jdbc.Driver
            - --spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
            - --spring.datasource.url=$(DB_CONNECTION_STRING)
            - --spring.datasource.username=$(DB_USER)
            - --spring.datasource.password=$(DB_PASSWORD)
            - --show.transcript_dropdown=true
            - --skin.show_tweet_button=$(SKIN_SHOW_TWEET_BUTTON)
            - --skin.email_contact=genie-private@cbioportal.org
            - --skin.right_nav.show_data_sets=false
            - --skin.right_nav.show_testimonials=false
            - --skin.login.contact_html=Please follow the "First time user registration" link below to request access. If you think you have received this message in error, please contact us at <a style="color:#FF0000" href="mailto:genie-private-access@cbioportal.org">genie-private-access@cbioportal.org</a>.
            - --skin.data_sets_footer=
            - --skin.data_sets_header=The portal currently contains data from <NUM_CANCER_STUDIES> cancer genomics studies.  The table below lists the number of available samples per cancer study and data type.
            - --skin.documentation.baseurl=https://raw.githubusercontent.com/cBioPortal/cbioportal/genie-private-documentation/docs/
            - --skin.documentation.skin.news=genie-news.md
            - --skin.show_study_help_button=true
            - --skin.query.max_tree_depth=0
            - --session.service.url=https://session-service.cbioportal.org/api/sessions/genie_private_portal/
            - --session.service.origin=*
            - --session.service.user=$(SESSION_SERVICE_USER_NAME)
            - --session.service.password=$(SESSION_SERVICE_USER_PASSWORD)
            - --google_analytics_profile_id=$(GOOGLE_ANALYTICS_PROFILE_ID)
            - --google_tag_manager_id=GTM-TLXCGKK
            - --survival.show_p_q_values_in_survival_type_table=false
            - --survival.min_group_threshold=6
            - --survival.initial_x_axis_limit=120
            #- --googleplus.consumer.key=$(GOOGLE_PLUS_CONSUMER_KEY)
            #- --googleplus.consumer.secret=$(GOOGLE_PLUS_CONSUMER_SECRET)
            #- --microsoftlive.consumer.key=$(MICROSOFT_LIVE_CONSUMER_KEY)
            #- --microsoftlive.consumer.secret=$(MICROSOFT_LIVE_CONSUMER_SECRET)
            - --bitly.url=$(BITLY_URL)
            - --bitly.access.token=$(BITLY_ACCESS_TOKEN)
            - --db.suppress_schema_version_mismatch_errors=true
            - --sitemaps=false
            - --oncokb.public_api.url=https://www.oncokb.org/api/v1
            - --oncokb.token=$(ONCOKB_TOKEN)
            - --genomenexus.url=https://www.genomenexus.org
            - --genomenexus.isoform_override_source=uniprot
            - --show.genomenexus.annotation_sources=mutation_assessor
            - --dat.unauth_users=anonymousUser
            # redis session store settings (different from redis persistence cache)
            - --spring.session.store-type=redis
            - --spring.data.redis.host=$(REDIS_SESSION_HOST)
            - --spring.data.redis.port=$(REDIS_SESSION_PORT)
            - --spring.data.redis.password=$(REDIS_SESSION_PASSWORD)
            # To enable redis session store, we need to set
            # spring.autoconfigure.exclude to a random value to override the
            # property in applications.properties.EXAMPLE
            - --spring.autoconfigure.exclude=dontexcludeanythingplz
            # cache settings (currently redis)
            - --cache.statistics_endpoint_enabled=false
            - --persistence.cache_type=redis
            - --redis.leader_address=redis://cbioportal-genie-persistence-redis-master:6379
            - --redis.follower_address=redis://cbioportal-genie-persistence-redis-replicas:6379
            - --redis.database=3
            - --redis.clear_on_startup=false
            - --redis.password=$(REDIS_PERSISTENCE_PASSWORD)
            - --redis.ttl_mins=60
            # misc. frontend settings (this is NOT a persistence layer caching property!)
            - --enable_persistent_cache=true
            # NEW PROPERTIES START
            - --persistence.cache_type_clickhouse=redis
            #- --persistence.cache_type_clickhouse=no-cache
            - --spring.datasource.mysql.url=$(DB_CLICKHOUSE_CONNECTION_STRING)
            - --spring.datasource.mysql.username=$(DB_CLICKHOUSE_USER)
            - --spring.datasource.mysql.password=$(DB_CLICKHOUSE_PASSWORD)
            - --spring.datasource.mysql.driver-class-name=com.clickhouse.jdbc.ClickHouseDriver
            - --spring.datasource.clickhouse.driver-class-name=com.clickhouse.jdbc.ClickHouseDriver
            - --spring.datasource.clickhouse.url=$(DB_CLICKHOUSE_CONNECTION_STRING)
            - --spring.datasource.clickhouse.username=$(DB_CLICKHOUSE_USER)
            - --spring.datasource.clickhouse.password=$(DB_CLICKHOUSE_PASSWORD)
            - --clickhouse_mode=true
            - --spring.profiles.active=clickhouse
            # NEW PROPERTIES END
            # compress on client side
            - --enable_request_body_gzip_compression=true
            # comparison settings
            # NA terms
            - --comparison.categorical_na_values=Unknown|NA|Not documented in medical record|Test ordered, results not in chart|Test not done
            # feature flags
            - --enable_treatment_groups=true
            - --filter_groups_by_appname=false
            # auth
            #- --spring.security.saml2.relyingparty.registration.cbio-saml-idp.assertingparty.metadata-uri=/cbioportal/msk-beta-cbioportal-saml-idp-metadata.xml
            - --spring.security.saml2.relyingparty.registration.cbio-saml-idp.assertingparty.metadata-uri=https://keycloak.cbioportal.org/auth/realms/genie-private/protocol/saml/descriptor
            - --spring.security.saml2.relyingparty.registration.cbio-saml-idp.entity-id=cbioportal-genie-private-v6
            - --spring.security.saml2.relyingparty.registration.cbio-saml-idp.signing.credentials[0].certificate-location=file:/cbioportal/local.crt
            - --spring.security.saml2.relyingparty.registration.cbio-saml-idp.signing.credentials[0].private-key-location=file:/cbioportal/local.key
            # data token setting
            - --dat.method=oauth2
            - --dat.oauth2.clientId=cbioportal-genie-private-api-v6
            - --dat.oauth2.clientSecret=$(DAT_OAUTH2_CLIENT_SECRET)
            - --dat.oauth2.accessTokenUri=https://keycloak.cbioportal.org/auth/realms/genie-private/protocol/openid-connect/token
            - --dat.oauth2.jwkUrl=https://keycloak.cbioportal.org/auth/realms/genie-private/protocol/openid-connect/certs
            - --dat.oauth2.issuer=https://keycloak.cbioportal.org/auth/realms/genie-private
            - --dat.oauth2.userAuthorizationUri=https://keycloak.cbioportal.org/auth/realms/genie-private/protocol/openid-connect/auth
            - --dat.oauth2.redirectUri=https://genie-private.cbioportal.org/api/data-access-token/oauth2
            - --dat.oauth2.jwtRolesPath=realm_access::roles
            # this addresses same issue as
            # https://github.com/cBioPortal/cbioportal/issues/2328 one needs to
            # set this if one doesn't want to forward https -> http -> https
            # when logging in through google auth. Somehow this goes over http
            # otherwise.
            - --server.compression.enabled=true
            - --server.tomcat.connection-timeout=20000
            - --server.tomcat.max-http-response-header-size=16384
            - --server.max-http-request-header-size=16384
            - --server.port=8888
          command:
            - java
          image: cbioportal/cbioportal:v7.1.2-web-shenandoah
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: 8888
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 12
            successThreshold: 1
            timeoutSeconds: 1
          name: cbioportal-backend-genie-private-blue
          ports:
            - containerPort: 8888
              protocol: TCP
            - containerPort: 8849
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health
              port: 8888
              scheme: HTTP
            initialDelaySeconds: 45
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 12Gi
            requests:
              memory: 6Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /cbioportal/local.key
              name: cbioportal-genie-private-configmap-volume
              subPath: local.key
            - mountPath: /cbioportal/local.crt
              name: cbioportal-genie-private-configmap-volume
              subPath: local.crt
      dnsPolicy: ClusterFirst
      nodeSelector:
        workload: "cbio-genie"
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
        - effect: NoSchedule
          key: workload
          operator: Equal
          value: cbio-genie
      volumes:
        - secret:
            defaultMode: 420
            items:
              - key: local.key
                path: local.key
              - key: local.crt
                path: local.crt
            secretName: eks-v6-shared-kc-dec-2029
          name: cbioportal-genie-private-configmap-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: cbioportal
    run: cbioportal-backend-genie-private-blue
  name: cbioportal-backend-genie-private-blue
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8888
  selector:
    run: cbioportal-backend-genie-private-blue
  sessionAffinity: None
  type: ClusterIP
