argocd/aws/203403084713/clusters/cbioportal-prod/apps/cbioportal/cbioportal_spring_boot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: cbioportal-spring-boot
    tags.datadoghq.com/env: eks-public
    tags.datadoghq.com/service: cbioportal
    tags.datadoghq.com/version: 6.3.2
  name: cbioportal-spring-boot
spec:
  replicas: 2
  selector:
    matchLabels:
      run: cbioportal-spring-boot
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: cbioportal-spring-boot
        tags.datadoghq.com/env: eks-public
        tags.datadoghq.com/service: cbioportal
        tags.datadoghq.com/version: 6.3.2
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/java-lib.version: v1.24.2
    spec:
      volumes:
      - name: cbioportal-frontend-config-volume
        configMap:
          name: single-cell-frontend-config
      containers:
      - envFrom:
        - secretRef:
            name: cbioportal-public6
        image: cbioportal/cbioportal:6.3.2-web-shenandoah
        volumeMounts:
        - name: cbioportal-frontend-config-volume
          mountPath: /cbioportal/
        command: [ "java" ]
        args: [
            # from https://developers.redhat.com/blog/2017/04/04/openjdk-and-containers/
            "-Xms100m",
            "-Xmx25g",
            "-XX:+UnlockExperimentalVMOptions",
            "-XX:+UseShenandoahGC",
            "-XX:ShenandoahUncommitDelay=1000",
            "-XX:ShenandoahGuaranteedGCInterval=10000",
            #"-XX:+AlwaysPreTouch",
            #"-XX:+UseTransparentHugePages",
            #"-XX:+UseNUMA",
            #"-XX:+PrintGCDetails",
            #"-XX:+UseParallelGC",
            #"-XX:+PrintGCDateStamps",
            #"-XX:ParallelGCThreads=4",
            #"-XX:+UseG1GC",
            #"-XX:+AggressiveHeap",
            # non aggressive garbage collection
            #"-XX:MinHeapFreeRatio=20",
            #"-XX:MaxHeapFreeRatio=40",
            #"-XX:GCTimeRatio=19",
            #"-XX:AdaptiveSizePolicyWeight=90",
            # This issue says to use maxRAMFraction > 1
            # https://github.com/akka/akka/issues/23499, but haven't found this
            # to work v well
            #"-XX:MaxRAMFraction=1",
            "-XX:+PrintFlagsFinal",
            "-XshowSettings:vm",
            # need to set MaxRAM, somehow the MaxRAMFraction is not picked up
            # from the limits
            #"-XX:MaxRAM=6500m",
            "-jar",
            "/cbioportal-webapp/app.jar",
            # enable remote debug
            "--com.sun.management.jmxremote.rmi.port=8849",
            "--com.sun.management.jmxremote=false",
            "--com.sun.management.jmxremote.port=8849",
            "--com.sun.management.jmxremote.ssl=false",
            "--com.sun.management.jmxremote.authenticate=false",
            "--com.sun.management.jmxremote.local.only=false",
            "--java.rmi.server.hostname=localhost",
            # /enable remote debug
            "--frontend.url=https://frontend.cbioportal.org/",
            "--enable_cross_study_expression=(studies)=>(studies.filter(s=>/pan_can_atlas/.test(s.studyId) === false).length === 0 || studies.filter(s=>/tcga_gdc/.test(s.studyId) === false).length === 0)",
            "--default_cross_cancer_study_session_id=5c8a7d55e4b046111fee2296",
            "--quick_search.enabled=true",
            "--skin.footer=",
            "--skin.right_nav.whats_new_blurb=",
            "--skin.quick_select_buttons=TCGA PanCancer Atlas Studies#*pan_can_atlas*;Curated set of non-redundant studies|227 studies that are manually curated including TCGA and non-TCGA studies with no overlapping samples#acbc_mskcc_2015,acc_tcga_pan_can_atlas_2018,acyc_fmi_2014,acyc_mda_2015,acyc_mskcc_2013,acyc_sanger_2013,all_phase2_target_2018_pub,all_stjude_2016,aml_target_2018_pub,ampca_bcm_2016,angs_project_painter_2018,bfn_duke_nus_2015,blca_bgi,blca_cornell_2016,blca_dfarber_mskcc_20 [...]
            "--skin.example_study_queries=tcga pancancer atlas\ntcga -legacy -pancancer\ntcga or icgc\nmsk-impact\n-\"cell line\"\nbreast\nesophageal OR stomach\nprostate msk\nserous",
            "--skin.patientview.filter_genes_profiled_all_samples=false",
            "--installation_map_url=https://installationmap.netlify.app/",
            "--app.name=public-portal",
            # connecting over dbcp
            "--dbconnector=dbcp",
            # Authentication settings
            "--authenticate=optional_oauth2",
            "--authorization=false",
            "--security.method_authorization_enabled=false",
            "--always_show_study_group=PUBLIC",
            "--spring.security.oauth2.client.registration.google.clientId=$(GOOGLE_PLUS_CONSUMER_KEY)",
            "--spring.security.oauth2.client.registration.google.clientSecret=$(GOOGLE_PLUS_CONSUMER_SECRET)",
            "--spring.security.oauth2.client.provider.google.user-name-attribute=email",
          # "--logging.level.org.springframework.security=DEBUG",
            "--spring.security.oauth2.client.registration.azure.client-id=$(MICROSOFT_LIVE_CONSUMER_KEY)",
            "--spring.security.oauth2.client.registration.azure.clientSecret=$(MICROSOFT_LIVE_CONSUMER_SECRET)",
            "--spring.security.oauth2.client.registration.azure.authorization-grant-type=authorization_code",
            "--spring.security.oauth2.client.registration.azure.redirect-uri={baseUrl}/login/oauth2/code/azure",
            "--spring.security.oauth2.client.registration.azure.scope=openid,profile,email",
            "--spring.security.oauth2.client.provider.azure.user-name-attribute=email",
            "--spring.security.oauth2.client.provider.azure.authorization-uri=https://login.microsoftonline.com/common/oauth2/v2.0/authorize",
            "--spring.security.oauth2.client.provider.azure.token-uri=https://login.microsoftonline.com/common/oauth2/v2.0/token",
            "--spring.security.oauth2.client.provider.azure.jwk-set-uri=https://login.microsoftonline.com/common/discovery/v2.0/keys",
            "--security.cors.allowed-origins=*",
            # db settings
            "--db.user=$(DB_USER)",
            "--db.password=$(DB_PASSWORD)",
            "--spring.datasource.driver-class-name=com.mysql.jdbc.Driver",
            "--spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect",
            "--spring.datasource.url=jdbc:mysql://publicdb.cbioportal.org:3306/cgds_public_v6?zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true",
            "--spring.datasource.username=$(DB_USER)",
            "--spring.datasource.password=$(DB_PASSWORD)",
#            "-Ddb.connection_string=$(DB_CONNECTION_STRING)",
            "--tomcat.catalina.scope=runtime",
            "--show.transcript_dropdown=true",
            "--skin.show_tweet_button=$(SKIN_SHOW_TWEET_BUTTON)",
            "--skin.show_donate_button=true",
            "--skin.email_contact=cbioportal@googlegroups.com",
            "--skin.data_sets_footer=Data sets of published studies were curated from literature. Data sets of legacy TCGA studies were downloaded from the <a href=\"http://gdac.broadinstitute.org\">Broad Institute Firehose</a>, last updated 1/28/2016.",
            "--skin.data_sets_header=The table below lists the number of available samples per cancer study and data type. It also provides links to download the data for each study. For alternative ways of downloading, see the <a href=\"https://docs.cbioportal.org/5.2-datasets/downloads#introduction\">Download Documentation</a>.",
            "--skin.authorization_message=Welcome to cBioPortal - sign in with your Google or Microsoft account to store your <a href=\"https://www.cbioportal.org/tutorials#virtual-studies\" target=\"_blank\">virtual studies</a> and <a href=\"https://www.cbioportal.org/tutorials#group-comparison\" target=\"_blank\">groups</a>. This will allow you to access your studies and groups from any computer, and cBioPortal will also remember your study view charts preferences for each study (i.e. order of [...]
            "--skin.blurb=",
            "--show.mdacc.heatmap=true",
            "--skin.documentation.faq=user-guide/faq.md",
            "--skin.show_study_help_button=true",
            "--skin.show_r_matlab_tab=false",
            "--priority_studies=PanCancer Studies#msk_chord_2024,msk_impact_2017,metastatic_solid_tumors_mich_2017,mixed_allen_2018,summit_2018,tmb_mskcc_2018,ntrk_msk_2019,msk_ch_2020,pan_origimed_2020,pancan_pcawg_2020,msk_met_2021;Pediatric Cancer Studies#pptc_2019,all_phase2_target_2018_pub,rt_target_2018_pub,wt_target_2018_pub,aml_target_2018_pub,nbl_target_2018_pub,pediatric_dkfz_2017,mixed_pipseq_2017,all_stjude_2016,all_stjude_2015,es_dfarber_broad_2014,es_iocurie_2014,mbl_pcgp,pancan_ma [...]
            "--studyview.max_samples_selected=100000",
            "--study_download_url=https://cbioportal-datahub.s3.amazonaws.com/",
            "--session.service.url=https://session-service.cbioportal.org/api/sessions/public_portal/",
            "--session.service.origin=*",
            "--session.service.user=$(SESSION_SERVICE_USER_NAME)",
            "--session.service.password=$(SESSION_SERVICE_USER_PASSWORD)",
            "--google_analytics_profile_id=G-5260NDGD6Z",
            "--bitly.url=$(BITLY_URL)",
            "--bitly.access.token=$(BITLY_ACCESS_TOKEN)",
            "--sentry.dsn=$(SENTRY_DSN)",
            "--sentry.factory=org.cbioportal.logging.SentryClientFactory",
            "--sentry.traces-sample-rate=1.0",
            "--sentry.exception-resolver-order=-2147483647",
            #"--sentryjs.frontend_project_endpoint=$(SENTRY_FRONTEND_DSN)",
            "--db.suppress_schema_version_mismatch_errors=true",
            "--sitemaps=true",
            "--oncokb.public_api.url=https://www.oncokb.org/api/v1",
            "--oncokb.token=$(ONCOKB_TOKEN)",
            "--genomenexus.url=https://v1.genomenexus.org",
            "--show.genomenexus.annotation_sources=mutation_assessor",
            "--matchminer.url=http://ec2-54-158-52-176.compute-1.amazonaws.com:5555",
            "--matchminer.token=$(MATCHMINER_TOKEN)",
            # redis session store settings (different from redis persistence cache)
            "--spring.session.store-type=redis",
            # "--server.servlet.session.timeout=10s", (not sure what this should be)
            "--spring.data.redis.host=$(REDIS_SESSION_HOST)",
            "--spring.data.redis.port=$(REDIS_SESSION_PORT)",
            "--spring.data.redis.password=$(REDIS_SESSION_PASSWORD)",
            # To enable redis session store, we need to set
            # spring.autoconfigure.exclude to a random value to override the
            # property in applications.properties.EXAMPLE
            "--spring.autoconfigure.exclude=dontexcludeanythingplz",

            # redis cache settings (currently redis)
            #"--cache.statistics_endpoint_enabled=false",
            # "--logging.level.org.cbioportal.persistence=DEBUG",
            # persistence cache settings (currently redis)
            #"-Dcache.statistics_endpoint_enabled=false",
            "--persistence.cache_type=redis",
            "--redis.leader_address=redis://cbioportal-public-persistence-redis-master:6379",
            "--redis.follower_address=redis://cbioportal-public-persistence-redis-replicas:6379",
            "--redis.database=14",
            "--redis.password=$(REDIS_PERSISTENCE_PASSWORD)",
            "--redis.clear_on_startup=true",
            "--cache.endpoint.enabled=true",
            "--cache.endpoint.api-key=1kmfbftTb2iY",
            # disable ehcache
#            ??? Are we still using ehcache?
#            "--ehcache.cache_type=none",
            # misc frontend settings (this is NOT for backend persistence layer caching)
            #"--enable_persistent_cache=true",
            # compress on client side
            "--enable_request_body_gzip_compression=true",
            # for single cell plugin
            "--frontend.config=/cbioportal/frontendConfig.json",
            "--frontend_authenticate=optional_oauth2",
            # this addresses same issue as
            # https://github.com/cBioPortal/cbioportal/issues/2328 one needs to
            # set this if one doesn't want to forward https -> http -> https
            # when logging in through google auth. Somehow this goes over http
            # otherwise.
#            ??? How can we translate this?
#            "--proxy-base-url",
#            "https://www.cbioportal.org",
#            "--max-threads",
#            "0",
#            "--session-store",
#            "redis",
#            "--session-store-operation-timeout",
#            "10000",
            # Fix long URL https://github.com/cBioPortal/cbioportal/issues/5836
            "--server.compression.enabled=true",
            "--server.tomcat.connection-timeout=20000",
            "--server.tomcat.max-http-response-header-size=16384",
#            ??? can we still set port
#            "--server.tomcat.port=8888",
            "--server.max-http-request-header-size=16384",
            "--show.civic=true"
        ]
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 45
          timeoutSeconds: 1
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 180
          timeoutSeconds: 1
          periodSeconds: 12
          failureThreshold: 5
        name: cbioportal-spring-boot
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8849
          protocol: TCP
        resources:
          requests:
              memory: 15Gi
          limits:
              memory: 26Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      nodeSelector:
        workload: "cbioportal"
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "cbioportal"
          effect: "NoSchedule"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: cbioportal-spring-boot
  # WARNING: when making a copy of this config file make sure to change the service name to avoid changing the production service
  name: cbioportal
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    run: cbioportal-spring-boot
  type: ClusterIP
