argocd/aws/203403084713/clusters/cbioportal-prod/apps/cbioportal/cbio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-ipblock@kubernetescrd,default-ratelimit-host@kubernetescrd
    acme.cert-manager.io/http01-ingress-class: traefik
  labels:
    app.kubernetes.io/instance: cbioportal
  name: cbioportal-ingress
  namespace: default
spec:
  rules:
    - host: master.cbioportal.org
      http:
        paths:
          - backend:
              service:
                name: cbioportal-backend-master-blue
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: beta.cbioportal.org
      http:
        paths:
          - backend:
              service:
                name: cbioportal-backend-public-beta-blue
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: staging.cbioportal.org
      http:
        paths:
          - backend:
              service:
                name: cbioportal-backend-staging
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - master.cbioportal.org
      secretName: master-cbio-cert
    - hosts:
        - beta.cbioportal.org
      secretName: cbioportal-beta-cert
    - hosts:
        - staging.cbioportal.org
      secretName: staging-cbioportal-cert
