argocd/aws/203403084713/clusters/cbioportal-prod/apps/cbioportal/genie-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-geoblock-genie@kubernetescrd
    acme.cert-manager.io/http01-ingress-class: traefik
  labels:
    app.kubernetes.io/instance: cbioportal
  name: genie-ingress
  namespace: default
spec:
  rules:
    - host: genie.cbioportal.org
      http:
        paths:
          - backend:
              service:
                name: cbioportal-backend-genie-public-blue
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: genie-private.cbioportal.org
      http:
        paths:
          - backend:
              service:
                name: cbioportal-backend-genie-private-blue
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - genie.cbioportal.org
      secretName: geniepublic-cbio-cert
    - hosts:
        - genie-private.cbioportal.org
      secretName: genieprivate-cbio-cert
